# pkl_parser

./: Cargo.toml  README.md  a.pkl  stdlib_uris.txt  test.pkl  x.pkl
src/: ast.rs  error.rs  lib.rs  main.rs  parser.rs  pkl.pest
src/ast/: annotation.rs  doc_comment.rs  expr.rs  pairs.rs  stmt.rs  types.rs
src/ast/expr/: binary.rs  boxed.rs  fn_expr.rs  if_expr.rs  indexing.rs  let_expr.rs  listing.rs  mapping.rs  object.rs  str.rs
src/ast/stmt/: amends.rs  class.rs  extends.rs  function.rs  import.rs  module.rs  property.rs  typealias.rs
tests/: lang_ref.rs  stdlib.rs
