[package]
name = "pkl-parser"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Yatsu <dev.yatsu@gmail.com>"]
description = "Fastest PKL-parsing crate out there!"
repository = "https://github.com/DevYatsu/new-pkl"
documentation = "https://docs.rs/new-pkl"
readme = "README.md"
keywords = ["pkl", "parser", "rust", "lexer", "ast"]
categories = ["parsing"]

[dependencies]
pest = "2.7.11"
pest_derive = "2.7.11"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
select = "0.6.0"
regex = "1.10.6"
serde_json = "1.0"
